    proof of concept kind of thing for now
  - new option ".objects" in id() to provide objects as a list
  - new option "rk.JS.vars" to make JS variables match the name of the
    original R object
  - new function idq() to print quoted IDs of XML nodes for use in JavaScript
    sections
  - new function modifiers() to make checking for valid mdifiers of a given
    node easier
changed:
  - improved error handling in rk.JS.header(), error messages are more
    informative now
  - rk.uniqueIDs() now checks "dialog" and "wizard" sections separately
  - updated the vignette with information on js() and how to add help pages
  - internal function modif.validity() now calls modifiers() to give more
    useful feedback

changes in version 0.07-3 (2015-06-29)
fixed:
  - rk.JS.header() now produces usable level options
added:
  - new slot "opt.sep" in classes rk.JS.arr and rk.JS.opt, as well as new
    option "opt.sep" in rk.paste.JS(), rk.JS.array() and rk.JS.options(), to
    manipulate the character string separating the previous options from the ones
    defined by these objects

changes in version 0.07-2 (2015-03-14)
fixed:
  - replaced the outdated links to sourceforge with our new KDE URL

changes in version 0.07-1 (2015-03-13)
fixed:
  - rk.XML.optionset() does now allow to re-use objects defined in the same
    function call (i.e., refer to optioncolumns in the logic section)
  - removed arguments "help" and "component" from rk.XML.optionscolumn()
    again, as these are already being documented via the objects they connect to.
  - rk.build.plugin() was still only using the "--no-vignettes" option from R
    < 3
  - rk.XML.pluginmap() malformed label argument names if they referred to
    standrad maneu entries
  - rk.plugin.skeleton() still allowed invalid IDs, fixed the regexp
  - rk.XML.snippets() now also accepts <include> as child node
  - rk.XML.tabbook() returns <insert> nodes as-is, not nested in <tab></tab>