@@ -111,6 +111,7 @@ Collate:
     'rk.XML.wizard.R'
     'rk.build.plugin.R'
     'rk.get.comp.R'
+    'rk.get.indent.R'
     'rk.get.rkh.prompter.R'
     'rk.i18n.comment.R'
     'rk.paste.JS.R'
@@ -131,6 +132,7 @@ Collate:
     'rk.rkh.title.R'
     'rk.rkh.usage.R'
     'rk.set.comp.R'
+    'rk.set.indent.R'
     'rk.set.rkh.prompter.R'
     'rk.testsuite.doc.R'
     'rk.uniqueIDs.R'
