@@ -55,9 +55,9 @@
 #'  plotOpts=tmp.plot.options)
 #'
 #' cat(js.prnt)
-rk.paste.JS.graph <- function(..., plotOpts=NULL, printoutObj=NULL, level=2, indent.by="\t", empty.e=FALSE){
+rk.paste.JS.graph <- function(..., plotOpts=NULL, printoutObj=NULL, level=2, indent.by=rk.get.indent(), empty.e=FALSE){
 
-  plotOptsIndent <- paste(rep("\\t", level), collapse="")
+  plotOptsIndent <- paste(rep(rk.get.indent(escape=TRUE), level), collapse="")
 
   # define variables
   js.prnt <- rk.paste.JS(
@@ -90,7 +90,7 @@ rk.paste.JS.graph <- function(..., plotOpts=NULL, printoutObj=NULL, level=2, ind
   # graph.on() & begin try()
   js.prnt <- paste(js.prnt, rk.paste.JS(
     ite("full", echo("rk.graph.on()\n")),
-    echo("\ttry({\n"),
+    echo(paste0(indent(level=level, by=indent.by), "try({\n")),
     level=level, indent.by=indent.by, empty.e=empty.e
   ), sep="\n\n")
 
@@ -133,7 +133,7 @@ rk.paste.JS.graph <- function(..., plotOpts=NULL, printoutObj=NULL, level=2, ind
 
   # end try() & graph.off()
   js.prnt <- paste(js.prnt, rk.paste.JS(
-    echo("\n\t})\n"),
+    echo(paste0("\n",indent(level=level, by=indent.by),"})\n")),
     ite("full", echo("rk.graph.off()\n")),
     level=level, indent.by=indent.by, empty.e=empty.e
   ), sep="\n\n")
