@@ -8,7 +8,7 @@ rk.plugin.component(about, xml = list(), js = list(), rkh = list(),
   provides = c("logic", "dialog"), scan = c("var", "saveobj", "settings"),
   guess.getter = FALSE, hierarchy = "test", include = NULL,
   create = c("xml", "js", "rkh"), dependencies = NULL, hints = TRUE,
-  gen.info = TRUE, indent.by = "\\t")
+  gen.info = TRUE, indent.by = rk.get.indent())
 }
 \arguments{
 \item{about}{Either a character string with the name of this plugin component,
