@@ -39,6 +39,8 @@
         sections
       \item new function \code{modifiers()} to make checking for valid mdifiers of a given
         node easier
+      \item new functions \code{rk.get.indent()} and \code{rk.set.indent()} to globally set indentation
+        string
     }
   }
   \subsection{changed}{
@@ -49,6 +51,8 @@
       \item updated the vignette with information on \code{js()} and how to add help pages
       \item internal function \code{modif.validity()} now calls \code{modifiers()} to give more
         useful feedback
+      \item all functions offering \code{"intent.by"} as an option now fetch the default value
+        by calling \code{rk.get.indent()}
     }
   }
 }
